[workspace]
members = [
    "anicore",
    "aniapi",
    "plugins/utils_plugin",
    "plugins/voicetemp_plugin"
]
resolver = "2"

[workspace.dependencies]
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "signal"] }
