[workspace]
members = [
    "anicore",
    "aniapi",
    "aniruntime",
    "anisystemd",
    "anidashboard",
    "plugins/utils_plugin",
    "plugins/voicetemp_plugin",
    "plugins/test_plugin",
    "plugins/test_service",
    "plugins/games_plugin"
]
resolver = "2"

[workspace.dependencies]
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "signal"] }
